# nanotok

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
benchmarks/: bench.py
csrc/: bindings.cpp  bpe_engine.hpp  unicode_tables.inc
src/nanotok/: __init__.py  _chat_template.py  _core.py  _hub.py  _tiktoken_compat.py
tests/: conftest.py  test_batch.py  test_chat_template.py  test_encode_decode.py  test_hf_compat.py  test_hub.py  test_special_tokens.py  test_tiktoken_compat.py
