[build-system]
requires = ["scikit-build-core>=0.11", "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

[project]
name = "nanotok"
version = "0.1.0"
description = "High-performance BPE tokenizer. 20-60x faster than tiktoken."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "Ishaan Kumar", email = "ishaan.kumar281@gmail.com"}]
keywords = ["tokenizer", "bpe", "nlp", "llm", "tiktoken", "huggingface"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/0xD4rky/nanotok"
Repository = "https://github.com/0xD4rky/nanotok"
Issues = "https://github.com/0xD4rky/nanotok/issues"

[project.optional-dependencies]
hub = ["huggingface-hub>=0.20"]
chat = ["jinja2>=3.0"]
all = ["huggingface-hub>=0.20", "jinja2>=3.0"]

[tool.scikit-build]
wheel.packages = ["src/nanotok"]

[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE = "Release"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.4",
    "tiktoken>=0.5",
    "transformers>=4.40",
    "tokenizers>=0.15",
    "datasets>=2.16",
    "jinja2>=3.0",
    "huggingface-hub>=0.20",
]
